# mastersproject

./: Q5-with-rectangle.ipynb  README.md  environment.yml  get_started-variate-permeability.ipynb  grid-convergence.ipynb  new_setup.md  pyproject.toml  quarter-five spot problem.ipynb  setup_computer.md  understanding_get_started.ipynb  variations_get_started.ipynb
Convergence analysis/: Overlapping nodes.ipynb  abstract-grid-convergence.ipynb  prototype-grid-convergence.ipynb
Fractures/: Q5-with-fracture.ipynb  manipulate_fractures.ipynb  sample_setup_with_fractures.ipynb
MAT254 Exam/: Hau exam Haakon.ipynb  Hau exam.ipynb  mat254 exam.ipynb
PorePy development/: bug - sort_point_plane - argument shape.ipynb
Understanding code segments/: Q&A-on-code.ipynb
biot/: Bug-biot-solver.docx  biot-model.ipynb
initial_notebooks/: gmsh_frac_file.geo  mesh_1.msh  mesh_1_refined.msh  new_setup.md  quarter-five spot problem.ipynb  understanding_get_started.ipynb
mechanics/: MPSA-intro-1.ipynb  MPSA-intro-2.ipynb  MPSA-intro.ipynb  het-mechanics-grid-convergence.ipynb  keilegavlen et. al. 2017 paper experiment.ipynb
meshing/: gmsh_frac_file.geo  gmsh_frac_file.msh  meshing.ipynb
meshing-of-fractures/: 2D fracture meshing.ipynb  3D fracture meshing.ipynb  fracture_network.vtu  gmsh_frac_file.geo  gmsh_frac_file.msh
transport/: advection-diffusion-slim.ipynb  assign_data.ipynb  cartesian_transport_no_fractures.ipynb  extended-tracer-transport.ipynb  gmsh_frac_file.geo  gmsh_frac_file.msh  simple-transport-with-fracture.ipynb  tracer-transport.ipynb  (+2 more)
(+3781 files in other folders)
