[tool.poetry]
name = "mastersproject"
version = "0.1.0"
description = ""
authors = ["haakon-e <haakonervik@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
meshio = "=2.3.8"
networkx = "=2.3"
numpy = "=1.16.3"
scipy = "=1.2.1"
sympy = "=1.4"
matplotlib = "=3.0.3"
future = "=0.17.1"
six = "=1.12.0"
pytest = "=4.5.0"
pytest-cov = "=2.6.1"
pytest-runner = "=4.4"
numba = "=0.47"
vtk = "=8.1.2"
pendulum = "^2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
